--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
+    <!--Script to include Tailwind in the files, copy and paste it into new files and use tailwindcss.com as your source to convert from css styling to tailwind styling-->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
     
